refactor: refatorações apontadas pelo sonar