@@ -1,15 +1,12 @@
 package com.payproject.domain.order.services;
 
 import com.payproject.domain.order.dto.ItemDTO;
-import com.payproject.domain.order.dto.OrderDTO;
 import com.payproject.domain.order.entities.ItemEntity;
-import com.payproject.domain.order.entities.OrderEntity;
 import com.payproject.domain.order.repositories.ItemRepository;
 import com.payproject.domain.user.entities.UserEntity;
 import com.payproject.domain.user.services.UserService;
 import java.util.List;
 import java.util.Optional;
-import java.util.stream.Collectors;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Service;
 
@@ -43,7 +40,7 @@ public class ItemService
 				throw new RuntimeException(e);
 			}
 
-		}).collect(Collectors.toList());
+		}).toList();
 	}
 
 	public void saveItem(ItemEntity item)
